--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="build/css/styles.css">
   <title>Weather App</title>
 </head>
@@ -12,7 +13,10 @@
     <p>icon</p>
   </section>
   <section class="temperature">
-    <h2 class="temperature__degree">32</h2>
+    <div class="temperature__degree">
+      <h2 class="temperature__title">32</h2>
+      <span class="temperature__scale">&deg;f</span>
+    </div>
     <div class="temperature__description">Its cold outside</div>
   </section>
 
