added block summary

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         </div>
       </section>
       <section class="temperature">
-        <div class="temperature__degree">
-          <h2 class="temperature__title">temperature:</h2>
-          <span class="temperature__number"></span>
-          <span class="temperature__scale">&deg;f</span>
-        </div>
-        <div class="temperature__description">Its cold outside</div>
+        <h2 class="temperature__title">temperature:</h2>
+        <span class="temperature__number"></span>
+        <span class="temperature__scale">&deg;f</span>
+      </section>
+      <section class="summary">
+        <h2 class="summary__title">summary:</h2>
+          <span class="summary__description"></span>
       </section>
     </main>
   </div>
