--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="temperature">
         <h2 class="temperature__title">temperature:</h2>
         <span class="temperature__number"></span>
-        <span class="temperature__scale">&deg;f</span>
+        <span>&deg;</span><span class="temperature__scale">f</span>
       </section>
       <section class="summary">
         <h2 class="summary__title">summary:</h2>
